@@ -1,4 +1,4 @@
-.TH HDPARM 8 "September 2014" "Version 9.45"
+.TH HDPARM 8 "June 2015" "Version 9.46"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
